--- a/projects.html
+++ b/projects.html
@@ -578,7 +578,7 @@ margin-top:271% !important;
 		  
 		  <div class="col-lg-3 col-md-6 portfolio-item filter residential" style="margin-bottom:25px;">
             <div class="portfolio-wrap">
-              <a href="./projects/14.Mr. Ganesan Residence.html"><img src="./projects_files/01 Ganesh exterior  view3.jpg" class="img-responsive" style="width:360px;"></a>
+              <a href="./Projects/14.Mr. Ganesan Residence.html"><img src="./Projects_files/01 Ganesh exterior  view3.jpg" class="img-responsive" style="width:360px;">clixk here</a>
               <div class="portfolio-info">
                 <h3 style="font-family: Futura PT Book;font-size:18px;">Mr. Ganesan Residence</h3>
                 <p style="font-size: 14px;
